--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:postgresql://localhost:5432/realestate
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://keycloak.c1du7xzlrqh0.us-east-2.rds.amazonaws.com:5432/grace
+spring.datasource.username=master
+spring.datasource.password=eBLv34ER8CErQv4NSsvIX0bYL6
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
