--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:postgresql://keycloak.c1du7xzlrqh0.us-east-2.rds.amazonaws.com:5432/grace
+spring.datasource.url=jdbc:postgresql://keycloak.c1du7xzlrqh0.us-east-2.rds.amazonaws.com:5432/demo
 spring.datasource.username=master
 spring.datasource.password=eBLv34ER8CErQv4NSsvIX0bYL6
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -9,9 +9,42 @@ spring.jpa.defer-datasource-initialization=true
 spring.jpa.generate-ddl=true
 spring.sql.init.mode=always
 server.port=8080
+
+## EMAIL CONFIGURATION
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=<Login User to SMTP server>
-spring.mail.password=<Login password to SMTP server>
+spring.mail.username=""
+spring.mail.password=""
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.default-encoding=UTF-8
+spring.mail.protocol=smtp
+spring.mail.test-connection=false
+spring.mail.properties.mail.debug=true
+
+### THYMELEAF CONFIGURATION
+#spring.thymeleaf.cache=false
+#spring.thymeleaf.prefix=classpath:/templates/
+#spring.thymeleaf.suffix=.html
+#spring.thymeleaf.encoding=UTF-8
+
+#Keycloak
+keycloak.realm= realestate
+keycloak.auth-server-url= http://ec2-3-144-44-198.us-east-2.compute.amazonaws.com
+keycloak.ssl-required = none
+keycloak.resource = backend
+keycloak.credentials.secret=P2iRbA1tnowYPSQ67Bkmn0GSR7PAYlEv
+keycloak.use-resource-role-mappings = true
+keycloak.bearer-only                = true
+keycloak.principal-attribute=preferred_username
+
+
+#keycloak.verify-token-audience=true
+#keycloak.securityConstraints[0].authRoles[0]= admin
+#keycloak.securityConstraints[0].authRoles[1]= user
+#keycloak.securityConstraints[0].securityCollections[0].name = insecure stuff
+#keycloak.securityConstraints[0].securityCollections[0].patterns[0] = /t
+#
+#keycloak.securityConstraints[1].authRoles[0] = admin
+#keycloak.securityConstraints[1].securityCollections[0].name = admin stuff
+#keycloak.securityConstraints[1].securityCollections[0].patterns[0] = /admin
