--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,9 @@
 	<description>WAA Final Project</description>
 	<properties>
 		<java.version>17</java.version>
+		<spring.cloud-version>2021.0.1</spring.cloud-version>
 	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -52,6 +54,17 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>io.awspring.cloud</groupId>
+			<artifactId>spring-cloud-aws-dependencies</artifactId>
+			<version>2.3.0</version>
+			<type>pom</type>
+			<scope>import</scope>
+		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>io.awspring.cloud</groupId>-->
+<!--			<artifactId>spring-cloud-starter-aws-messaging</artifactId>-->
+<!--		</dependency>-->
 		<dependency>
 			<groupId>org.keycloak</groupId>
 			<artifactId>keycloak-spring-boot-starter</artifactId>
