--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,14 +13,17 @@ server.port=8080
 ## EMAIL CONFIGURATION
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=""
-spring.mail.password=""
+spring.mail.username=email
+spring.mail.password=email app password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.default-encoding=UTF-8
 spring.mail.protocol=smtp
 spring.mail.test-connection=false
 spring.mail.properties.mail.debug=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
 
 ### THYMELEAF CONFIGURATION
 #spring.thymeleaf.cache=false
